--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,30 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head>
     <meta charset="UTF-8">
     <title>Таксист Воронежа</title>
     <link rel="stylesheet" type="text/css" media="all"
-          href="/css/index.css" th:href="@{/css/index.css}" />
+          href="/css/index.css" th:href="@{/css/index.css}"/>
 </head>
 <body>
-
-<div id="username-page">
-    <div class="username-page-container">
-        <h1 class="title">Type your username to enter the Chatroom</h1>
-        <form id="usernameForm" name="usernameForm">
-            <div class="form-group">
-                <input type="text" id="name" placeholder="Username" autocomplete="off" class="form-control" />
-            </div>
-            <div id="asd" name="asd">
-                <input type="text" id="zxc" placeholder="Username" autocomplete="off" class="form-control" />
-            </div>
-            <div class="form-group">
-                <button type="submit" class="accent username-submit">Start Chatting</button>
-            </div>
-        </form>
-    </div>
-</div>
-
 <div class="container py-3">
     <div th:insert="~{header :: header}"></div>
 
@@ -35,14 +18,14 @@
 
     <h2 class="display-6 text-center mb-4">Почему стоит выбрать нас</h2>
 
-        <label class="display-6 text-width mb-4">
-    Безопасность и комфорт является одними из главных приоритетов для всех компаний.
-    Мы заботимся о безопасности наших пассажиров и водителей, используя только
-    проверенные и сертифицированные автомобили, а также обученных и опытных водителей.
-    Все наши водители проходят строгий отбор и проверку, чтобы гарантировать безопасность и комфорт
-    наших пассажиров. Кроме того, мы следим за тем, чтобы наши автомобили были в хорошем
-    состоянии и регулярно проходили техническое обслуживание.
-        </label>
+    <label class="display-6 text-width mb-4">
+        Безопасность и комфорт является одними из главных приоритетов для всех компаний.
+        Мы заботимся о безопасности наших пассажиров и водителей, используя только
+        проверенные и сертифицированные автомобили, а также обученных и опытных водителей.
+        Все наши водители проходят строгий отбор и проверку, чтобы гарантировать безопасность и комфорт
+        наших пассажиров. Кроме того, мы следим за тем, чтобы наши автомобили были в хорошем
+        состоянии и регулярно проходили техническое обслуживание.
+    </label>
 
     <h2 class="display-6 text-center mb-4">Мы предалагаем</h2>
     <br/>
@@ -76,7 +59,7 @@
                             <li>Высокий уровень комфорта</li>
                             <li>Быстрая подача</li>
                         </ul>
-                        <a type="button" class="w-100 btn btn-lg btn-primary" href="/order" >Заказать</a>
+                        <a type="button" class="w-100 btn btn-lg btn-primary" href="/order">Заказать</a>
                     </div>
                 </div>
             </div>
