--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,72 +1,55 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6" >
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head>
     <meta charset="UTF-8">
     <title>Регистрация</title>
     <link rel="stylesheet" type="text/css" media="all"
-          href="/css/index.css" th:href="@{/css/index.css}" />
+          href="/css/index.css" th:href="@{/css/index.css}"/>
 </head>
 <body>
-    <section class="vh-100" style="background-color: #eee;">
-        <div class="container h-100">
-            <div class="row d-flex justify-content-center align-items-center h-100">
-                <div class="col-lg-12 col-xl-11">
-                    <div class="card text-black" style="border-radius: 25px;">
-                        <div class="card-body p-md-5">
-                            <div class="row justify-content-center">
-                                <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
-
-                                    <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
-
-                                    <form class="mx-1 mx-md-4" th:action="@{/registration}" th:method="POST" th:object="${User}">
-                                        <div class="d-flex flex-row align-items-center mb-4">
-                                            <i class="fas fa-user fa-lg me-3 fa-fw"></i>
-                                            <div class="form-outline flex-fill mb-0">
-                                                <div class="form-label" style="color:red" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">error</div>
-                                                <input type="text" id="username" class="form-control" th:field="*{username}" />
-                                                <label class="form-label" for="username">Ваше имя</label>
-                                            </div>
-                                        </div>
-                                        <div class="d-flex flex-row align-items-center mb-4">
-                                            <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                                            <div class="form-outline flex-fill mb-0">
-                                                <div class="form-label" style="color:red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">error</div>
-                                                <input type="email" th:field="*{email}" id="email" class="form-control" />
-                                                <label class="form-label" for="email">Ваша почта</label>
-                                            </div>
-                                        </div>
-                                        <div class="d-flex flex-row align-items-center mb-4">
-                                            <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-                                            <div class="form-outline flex-fill mb-0">
-                                                <div class="form-label" style="color:red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">error</div>
-                                                <input type="password" th:field="*{password}" id="password" class="form-control" />
-                                                <label class="form-label" for="password">Ваш пароль</label>
-                                            </div>
-                                        </div>
-                                        <div class="d-flex flex-row align-items-center mb-4">
-                                            <i class="fas fa-key fa-lg me-3 fa-fw"></i>
-                                            <div class="form-outline flex-fill mb-0">
-                                                <div style="color:red" th:if="${#fields.hasErrors('number')}" th:errors="*{number}">error</div>
-                                                <input type="password" th:field="*{number}" id="number" class="form-control" />
-                                                <label class="form-label" for="number">Ваш номер телефона</label>
-                                            </div>
-                                        </div>
-                                        <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                                            <button type="submit" class="btn btn-primary btn-lg">Регистрация</button>
-                                        </div>
-                                    </form>
-
-                                </div>
-                                <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
-                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
-                                         class="img-fluid" alt="Sample image">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+<p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
+<form class="mx-1 mx-md-4" th:action="@{/registration}" th:method="POST" th:object="${User}">
+    <div class="d-flex flex-row align-items-center mb-4">
+        <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+        <div class="form-outline flex-fill mb-0">
+            <div class="form-label" style="color:red" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">
+                error
             </div>
+            <input type="text" id="username" class="form-control" th:field="*{username}"/>
+            <label class="form-label" for="username">Ваше имя</label>
         </div>
-    </section>
+    </div>
+    <div class="d-flex flex-row align-items-center mb-4">
+        <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+        <div class="form-outline flex-fill mb-0">
+            <div class="form-label" style="color:red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">error
+            </div>
+            <input type="email" th:field="*{email}" id="email" class="form-control"/>
+            <label class="form-label" for="email">Ваша почта</label>
+        </div>
+    </div>
+    <div class="d-flex flex-row align-items-center mb-4">
+        <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+        <div class="form-outline flex-fill mb-0">
+            <div class="form-label" style="color:red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">
+                error
+            </div>
+            <input type="password" th:field="*{password}" id="password" class="form-control"/>
+            <label class="form-label" for="password">Ваш пароль</label>
+        </div>
+    </div>
+    <div class="d-flex flex-row align-items-center mb-4">
+        <i class="fas fa-key fa-lg me-3 fa-fw"></i>
+        <div class="form-outline flex-fill mb-0">
+            <div style="color:red" th:if="${#fields.hasErrors('number')}" th:errors="*{number}">error</div>
+            <input type="password" th:field="*{number}" id="number" class="form-control"/>
+            <label class="form-label" for="number">Ваш номер телефона</label>
+        </div>
+    </div>
+    <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+        <button type="submit" class="btn btn-primary btn-lg">Регистрация</button>
+    </div>
+</form>
 </body>
 </html>
