--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <footer class="text-body-secondary py-5" th:fragment="footer">
     <div class="container">
         <p class="float-end mb-1">
